import { Subject } from '@app/database/entities/subject.entity';
import { User } from '@app/database/entities/user.entity';
import { CustomApiRequest } from '@app/shared/customs/custom-api-request';
import { CustomApiResponse } from '@app/shared/customs/custom-api-response';
import { PaginateObject } from '@app/shared/dtos/paginate.dto';
import {
  CreateSubjectDto,
  UpdateSubjectDto,
} from '@app/shared/dtos/subjects/subject.dto';
import { SubjectStatus } from '@app/shared/enums/subject.enum';
import { BaseTypeOrmService } from '@app/shared/helpers/typeorm.helper';
import { FindOptions } from '@app/shared/interfaces/find-options.interface';
import {
  BadRequestException,
  ForbiddenException,
  HttpStatus,
  Inject,
  Injectable,
  Scope,
} from '@nestjs/common';
import { REQUEST } from '@nestjs/core';
import { InjectRepository } from '@nestjs/typeorm';
import { DataSource, Repository } from 'typeorm';

@Injectable({ scope: Scope.REQUEST })
export class SubjectService extends BaseTypeOrmService<Subject> {
  constructor(
    @Inject(REQUEST) private readonly request: CustomApiRequest,
    @InjectRepository(Subject)
    private readonly subjectRepository: Repository<Subject>,
    private readonly datasource: DataSource,
  ) {
    super(subjectRepository);
  }

  async findAll(findOptions: FindOptions): Promise<PaginateObject<Subject>> {
    return super.find(findOptions, 'subject', PaginateObject<Subject>);
  }

  async findOne(id: number): Promise<Subject> {
    const subject = await this.subjectRepository.findOne({
      where: { id: id },
      withDeleted: false,
      relations: ['courses', 'lessons', 'createdBy'],
    });

    if (!subject) throw new BadRequestException('Không tìm thấy chủ đề');

    return subject;
  }

  async create(data: CreateSubjectDto): Promise<CustomApiResponse<void>> {
    return await this.datasource.transaction(async (manager) => {
      const newSubject = manager.getRepository(Subject).create({
        ...data,
        createdBy: this.request.user as User,
        status: SubjectStatus.DRAFT,
      } as Subject);

      await manager.getRepository(Subject).save(newSubject);

      return new CustomApiResponse<void>(
        HttpStatus.CREATED,
        'SUBJECT.CREATE_SUCCESS',
      );
    });
  }

  async update(
    id: number,
    data: UpdateSubjectDto,
  ): Promise<CustomApiResponse<void>> {
    console.log('Update subject called with id:', id, 'and data:', data);
    return await this.datasource.transaction(async (manager) => {
      const subject = await manager
        .getRepository(Subject)
        .createQueryBuilder('subject')
        .leftJoinAndSelect('subject.lessons', 'lessons')
        .leftJoinAndSelect('lessons.video', 'video')
        .leftJoinAndSelect('lessons.quiz', 'quiz')
        .leftJoinAndSelect('subject.createdBy', 'createdBy')
        .where('subject.id = :id', { id })
        .getOne();
      if (!subject) throw new BadRequestException('Không tìm thấy khóa học');
      console.log(subject.lessons);
      if (subject.createdBy.id !== this.request.user.id)
        throw new ForbiddenException('Không có quyền truy cập chủ đề này');

      if (data.status === SubjectStatus.PUBLISHED) {
        for (const lesson of subject.lessons) {
          if (!lesson.video || !lesson.video.publicUrl || !lesson.quiz) {
            throw new BadRequestException(
              'Không thể xuất bản chủ đề khi còn bài học chưa có video hoặc quiz',
            );
          }
        }
      }
      await manager.getRepository(Subject).update(subject.id, data);

      return new CustomApiResponse<void>(
        HttpStatus.OK,
        'SUBJECT.UPDATE_SUCCESS',
      );
    });
  }

  async publish(id: number): Promise<CustomApiResponse<void>> {
    return await this.datasource.transaction(async (manager) => {
      const subject = await manager
        .getRepository(Subject)
        .createQueryBuilder('subject')
        .leftJoinAndSelect('subject.lessons', 'lessons')
        .leftJoinAndSelect('lessons.video', 'video')
        .leftJoinAndSelect('lessons.quiz', 'quiz')
        .leftJoinAndSelect('subject.createdBy', 'createdBy')
        .where('subject.id = :id', { id })
        .getOne();
      if (!subject) throw new BadRequestException('Không tìm thấy chủ đề');
      if (subject.createdBy.id !== this.request.user.id)
        throw new ForbiddenException('Không có quyền truy cập chủ đề này');
      
      for (const lesson of subject.lessons) {
        if (!lesson.video || !lesson.video.publicUrl || !lesson.quiz) {
          throw new BadRequestException(
            'Không thể xuất bản chủ đề khi còn bài học chưa có video hoặc quiz',
          );
        }
      }

      await manager.getRepository(Subject).update(subject.id, {
        status: SubjectStatus.PUBLISHED,
      });

      return new CustomApiResponse<void>(
        HttpStatus.OK,
        'Xuất bản tài liệu thành công',
      );
    });
  }

  async delete(id: number): Promise<CustomApiResponse<void>> {
    return await this.datasource.transaction(async (manager) => {
      const subject = await manager.getRepository(Subject).findOne({
        where: { id: id },
        relations: ['createdBy'],
        withDeleted: false,
      });
      if (!subject) throw new BadRequestException('Subject not found');
      if (subject.createdBy.id !== this.request.user.id)
        throw new ForbiddenException('Không có quyền truy cập chủ đề này');

      await manager.getRepository(Subject).softDelete(subject.id);

      return new CustomApiResponse<void>(
        HttpStatus.OK,
        'SUBJECT.DELETE_SUCCESS',
      );
    });
  }

  async restore(id: number): Promise<CustomApiResponse<void>> {
    return await this.datasource.transaction(async (manager) => {
      const subject = await manager.getRepository(Subject).findOne({
        where: { id: id },
        withDeleted: true,
      });
      if (!subject) throw new BadRequestException('Subject not found');
      await manager.getRepository(Subject).restore(subject.id);
      return new CustomApiResponse<void>(
        HttpStatus.OK,
        'SUBJECT.RESTORE_SUCCESS',
      );
    });
  }
}
